work(fix): fix display of process steps on smaller screens

--- a/src/components/state/Process/style.css
+++ b/src/components/state/Process/style.css
@@ -167,8 +167,8 @@
     grid-row-gap: 1.5rem;
   }
 
-  .MethodBlock {
-    border: 2px solid orange;
+  .MethodBlock:not(:first-of-type) {
+    display: block;
   }
 }
 
